--- a/package.json
+++ b/package.json
@@ -9,14 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.35",
+    "expo-font": "~13.0.3",
+    "expo-image-picker": "^16.0.6",
+    "expo-notifications": "^0.29.13",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.3.1",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "^2.23.1",
+    "react-native-gifted-chat": "^2.6.5",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "nativewind": "^2.0.11",
     "typescript": "^5.3.3"
   },
   "private": true
