--- a/package.json
+++ b/package.json
@@ -4,23 +4,32 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.11.0",
+    "@react-native-firebase/auth": "^21.11.0",
+    "@react-native-firebase/firestore": "^21.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "eas-cli": "^15.0.12",
     "expo": "~52.0.35",
+    "expo-constants": "~17.0.7",
+    "expo-dev-client": "~5.0.12",
+    "expo-device": "^7.0.2",
     "expo-font": "~13.0.3",
     "expo-image-picker": "^16.0.6",
     "expo-notifications": "^0.29.13",
     "expo-status-bar": "~2.0.1",
-    "firebase": "^11.3.1",
+    "firebase": "^9.23.0",
     "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-native": "0.76.7",
@@ -29,6 +38,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
