--- a/app.json
+++ b/app.json
@@ -31,6 +31,16 @@
         }
       ]
     ],
-    "newArchEnabled": true
+    "newArchEnabled": true,
+    "extra": {
+      "eas": {
+        "projectId": "dc1909cd-acf5-44a6-9235-dce3fa23c6e0"
+      }
+    },
+    "owner": "nischit05",
+    "runtimeVersion": "1.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/dc1909cd-acf5-44a6-9235-dce3fa23c6e0"
+    }
   }
 }
